# zero-day-predictor

./: README.md  dashboard.py  pyproject.toml  requirements.txt
models/: vulnerability_predictor.pkl
notebooks/: 01_git_history_exploration.ipynb  02_git_history_exploration.ipynb  temp_notebook.py  temp_notebook_2.py
notebooks/.ipynb_checkpoints/: 01_git_history_exploration-checkpoint.ipynb  02_git_history_exploration-checkpoint.ipynb
src/: create_dataset.py
src/api/: main.py
src/data_collection/: clone_repos.py  get_nvd_data.py  parse_nvd_to_db.py
src/feature_extraction/: code_metrics.py  repo_metrics.py
src/prediction/: predict_risk.py
src/training/: train_model.py
src/zero_day_predictor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
